--- a/src/components/login/Login.module.css
+++ b/src/components/login/Login.module.css
@@ -12,7 +12,7 @@ body {
 .formlogin {
     width: 400px;
     height: 340px;
-    background: #d27224;
+    background: #b468c0;
     margin: auto;
     margin-top: 150px;
     margin-bottom: 150px;
