--- a/src/components/login/Registrarseusuario.module.css
+++ b/src/components/login/Registrarseusuario.module.css
@@ -11,7 +11,7 @@ body {
 }
 
 .loginandregister > a {
-    background-color: #4CAF50; /* Green */
+    background-color: #b148e5; /* Green */
     border: none;
     color: white;
     padding: 15px 32px;
@@ -42,7 +42,7 @@ body {
 
 .formregister {
     width: 400px;
-    background: #ea910d;
+    background: #af70b1;
     padding: 30px;
     margin: 10px auto 20px;
     border-radius: 4px;
