--- a/src/components/login/Registrarseusuario.module.css
+++ b/src/components/login/Registrarseusuario.module.css
@@ -11,7 +11,7 @@ body {
 }
 
 .loginandregister > a {
-    background-color: #4CAF50; /* Green */
+    background-color: #dc34e2; /* Green */
     border: none;
     color: white;
     padding: 15px 32px;
